src/objects/Test_Result__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classnames__c</fullName>
        <label>Classnames</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>TextArea</type>
    </fields>
    <label>Test Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{0}</displayFormat>
        <label>Test Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestResuts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>